Future Farm Building Comments

--- a/index.html
+++ b/index.html
@@ -265,8 +265,11 @@
                 }
 
                 // sellpoint
+                // first line sets the logical location of the sellpoint
+                // second line sets the visual location of the selllpoint
                 // specialLocations[0] = new specialLocation(15, 30, null);
                 // blocks[30][15] = new tile(7, false, null, null);
+
                 setTimeout(renderMap, 100);
             }
 
