--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
 
             var purchaseableEquipment = new Array();
             // list of all the machines within the game
+            // to add more machines add the sprite to the machines list above and add a purchaseable equipment item to the list below
             purchaseableEquipment[0] = new machine("Tractor", 50000, "Small", "vehicle", machines[0], null);
             purchaseableEquipment[1] = new machine("Harvester", 75000, "Small", "vehicle", machines[3], null);
             purchaseableEquipment[2] = new machine("Grain Header", 15000, "Small", "implement", machines[4], "Harvester");
